lustre/include/uapi/linux/lustre/lustre_user.h
@@ -2523,6 +2523,11 @@ static inline char *hai_dump_data_field(const struct hsm_action_item *hai,
 	return buffer;
 }
 
+enum hal_flags {
+	/* Register even when the CDT is shutdown or being initialized */
+	HAL_CDT_FORCE = 1 << 1,
+};
+
 /* Copytool action list */
 #define HAL_VERSION 1
 #define HAL_MAXSIZE LNET_MTU /* bytes, used in userspace only */
